--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -55,7 +55,11 @@
                 </div>
               </li>
             </ul>
+            <div class="btn distributor-requests" style="width: 100%;padding: 0px;">
+              Distributor's Request
+            </div>
           </div>
+          
           <div class="col s12 m9">
             <div class="row">
               <div class="col s12" id="products-row">
